my-test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-express
  annotations:
    "kubectl.kubernetes.io/cascade-delete": "background"
spec:
  selector:
    matchLabels:
      app: node-express
  replicas: 2
  template:
    metadata:
      labels:
        app: node-express
    spec:
      containers:
        - name: node-express
          image: kahshiu/k-node-express:v1.0.1
          ## # hardcode environment variables
          ## env:
          ##   - name: COMMIT
          ##     value: "333"
          ## #  - name: ENV
          ## #    value: "production"
          ## # NOTE: not so grea, mapping value per entry!
          ##   - name: ENV
          ##     valueFrom:
          ##       configMapKeyRef:
          ##         name: k-node-express-config
          ##         key: ENV

          # NOTE: consume entire file, note values of this file and configmap are MERGED
          # possibly see pod failure due to configmap not loaded yet (if name were changed) but pods already booted up
      syncPolicy:
        automated:
          prune: true
          pruneLastResources: true
      orphanedResources:
          warn: false
          ignore:
            - group: ""
              kind: "Secret"
            - group: ""
              kind: "ConfigMap"
