my-test/ingress-node-express.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-node-express
  namespace: my-test
spec:
  ingressClassName: nginx
  rules:
    - host: nodeexpress.cluster.com
      http:
        paths:
          # - path: /argocd(/|$)(.*)
          #  pathType: ImplementationSpecific
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-node-express
                port:
                  number: 4000
        ## paths:
        ##   - path: /
        ##     pathType: Prefix
        ##     backend:
        ##       service:
        ##         name: service-node-express
        ##         port:
        ##           number: 4000
